<resources>
    <string name="app_name">ReviewPOJ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="handler_postdelayed">handler_postdelayed</string>
    <string name="timertask">timertask</string>
    <string name="scheduled">scheduled</string>
    <string name="rxjava">rxjava</string>
    <string name="conuntdown">conuntdown</string>
    <string name="start">START</string>
    <string name="done">DONE</string>
    <string name="alarm_manager">AlarmManager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_custom_ui">CustomUIActivity</string>
    <string name="tab_text_1">布局基础</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="adjust_frame">外框调节</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="loopers">倒计时轮询，定时器</string>
    <string name="long_coon">长连接</string>
    <string name="custom_ui">自定义UI</string>
    <string name="title_activity_long_coon">LongConn</string>
    <string name="title_activity_loop_task">loopTask</string>
    <string name="title_activity_iik_player">IikPlayerActivity</string>
    <string name="btn_stop">暂停</string>
    <string name="name_and_save">命名和保存</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="duplication_of_name">命名重复，该文件已存在</string>
</resources>
